[gd_scene load_steps=2 format=3 uid="uid://c1v2q8r9k4tn7"]

[ext_resource type="Script" path="res://scripts/ui/unit_panel.gd" id="1_x8k5m"]

[node name="UnitPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
anchor_top = 0.7
anchor_right = 0.25
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x8k5m")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Portrait" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 74.0
offset_bottom = 74.0
expand_mode = 1
stretch_mode = 5

[node name="InfoContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 84.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 110.0
theme_override_constants/separation = 4

[node name="NameLabel" type="Label" parent="InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Unit Name"
horizontal_alignment = 1

[node name="HPBar" type="ProgressBar" parent="InfoContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 100.0
value = 80.0
show_percentage = false

[node name="HPLabel" type="Label" parent="InfoContainer/HPBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "80/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MPBar" type="ProgressBar" parent="InfoContainer"]
modulate = Color(0.5, 0.7, 1, 1)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 100.0
value = 50.0
show_percentage = false

[node name="MPLabel" type="Label" parent="InfoContainer/MPBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "50/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FatigueBar" type="ProgressBar" parent="InfoContainer"]
modulate = Color(1, 0.8, 0.2, 1)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 100.0
value = 30.0
show_percentage = false

[node name="FTLabel" type="Label" parent="InfoContainer/FatigueBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "30%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StateLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 84.0
offset_top = 115.0
offset_right = 310.0
offset_bottom = 135.0
theme_override_font_sizes/font_size = 14
text = "State: FOLLOW"
horizontal_alignment = 1

[node name="SquadGrid" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 10.0
offset_top = 145.0
offset_right = 310.0
offset_bottom = 241.0
columns = 6
